syntax = "proto3";

package stock.v1;

option java_package = "com.gaywood.stock.grpc.v1";
option java_multiple_files = true;
option java_outer_classname = "OrderServiceProto";

import "google/protobuf/timestamp.proto";
import "stock/v1/common.proto";

// Order management service
service OrderService {
  // Create a new order
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);

  // Get an order by ID
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);

  // List active orders (not completed or cancelled)
  rpc ListActiveOrders(ListActiveOrdersRequest) returns (ListOrdersResponse);

  // Get bill for an order
  rpc GetBill(GetBillRequest) returns (BillResponse);

  // Update order status
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);

  // Cancel an order
  rpc CancelOrder(CancelOrderRequest) returns (OrderResponse);

  // List orders by table number
  rpc ListOrdersByTable(ListOrdersByTableRequest) returns (ListOrdersResponse);
}

// Request to create a new order
message CreateOrderRequest {
  string staff_id = 1;                    // UUID of the staff member
  optional int32 table_number = 2;        // Table number (1-999)
  repeated OrderItemInput items = 3;      // Order items
}

// Order item in create request
message OrderItemInput {
  string menu_item_id = 1;   // UUID of the menu item
  int32 quantity = 2;        // Quantity (1-99)
  string notes = 3;          // Special notes/modifications
}

// Request to get an order by ID
message GetOrderRequest {
  string order_id = 1;       // UUID of the order
}

// Request to list active orders
message ListActiveOrdersRequest {
  PageRequest pagination = 1;
}

// Response containing a list of orders
message ListOrdersResponse {
  repeated Order orders = 1;
  PageInfo page_info = 2;
}

// Request to get bill for an order
message GetBillRequest {
  string order_id = 1;
}

// Request to update order status
message UpdateOrderStatusRequest {
  string order_id = 1;
  OrderStatus status = 2;
}

// Request to cancel an order
message CancelOrderRequest {
  string order_id = 1;
}

// Request to list orders by table
message ListOrdersByTableRequest {
  int32 table_number = 1;
  PageRequest pagination = 2;
}

// Order response wrapper
message OrderResponse {
  Order order = 1;
}

// Order entity
message Order {
  string id = 1;                              // UUID
  OrderStatus status = 2;
  optional int32 table_number = 3;
  string staff_id = 4;                        // UUID
  repeated OrderItem items = 5;
  Price total_amount = 6;
  google.protobuf.Timestamp created_at = 7;
}

// Order item entity
message OrderItem {
  string id = 1;                  // UUID
  string menu_item_id = 2;        // UUID
  string menu_item_name = 3;
  int32 quantity = 4;
  Price unit_price = 5;
  Price total_price = 6;
  string notes = 7;
}

// Bill/receipt response
message BillResponse {
  Bill bill = 1;
}

// Bill entity
message Bill {
  string order_id = 1;
  repeated BillLineItem items = 2;
  Price total_amount = 3;
  optional int32 table_number = 4;
  google.protobuf.Timestamp generated_at = 5;
  string formatted_bill = 6;              // Text representation for printing
}

// Bill line item
message BillLineItem {
  string description = 1;
  int32 quantity = 2;
  Price unit_price = 3;
  Price total_price = 4;
}
